--- a/package.json
+++ b/package.json
@@ -8,10 +8,30 @@
     "preview": "vocs preview"
   },
   "dependencies": {
+    "@angular/core": "^17.1.3",
+    "@codesandbox/sandpack-react": "^2.12.0",
+    "@stackblitz/sdk": "^1.9.0",
     "@types/react": "latest",
+    "date-fns": "^3.3.1",
+    "feed": "^4.2.2",
+    "feed-core": "^1.1.6",
+    "gray-matter": "^4.0.3",
+    "marked": "^12.0.0",
     "react": "latest",
     "react-dom": "latest",
+    "rxjs": "^7.8.1",
     "typescript": "latest",
     "vocs": "latest"
+  },
+  "devDependencies": {
+    "prettier": "^3.2.5",
+    "ts-node": "^10.9.2"
+  },
+  "prettier": {
+    "trailingComma": "all",
+    "tabWidth": 4,
+    "semi": false,
+    "singleQuote": true,
+    "printWidth": 130
   }
 }
