--- a/package.json
+++ b/package.json
@@ -3,15 +3,19 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "predev": "node docs/helpers/gen-post-archive.js",
     "dev": "vocs dev",
+    "prebuild": "node docs/helpers/gen-post-archive.js",
     "build": "vocs build",
-    "preview": "vocs preview"
+    "preview": "vocs preview",
+    "gen-types": "npx -p typescript tsc docs/helpers/*.js --declaration --allowJs --emitDeclarationOnly"
   },
   "dependencies": {
     "@angular/core": "^17.1.3",
     "@codesandbox/sandpack-react": "^2.12.0",
     "@stackblitz/sdk": "^1.9.0",
     "@types/react": "latest",
+    "@uidotdev/usehooks": "^2.4.1",
     "date-fns": "^3.3.1",
     "feed": "^4.2.2",
     "feed-core": "^1.1.6",
@@ -24,6 +28,7 @@
     "vocs": "latest"
   },
   "devDependencies": {
+    "@types/node": "^20.11.17",
     "prettier": "^3.2.5",
     "ts-node": "^10.9.2"
   },
