--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,7 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
   },
-  "include": ["**/*.ts", "**/*.tsx", "torchlight.config.js", "docs/helpers/get-tagged-posts.ts"]
+  "include": ["**/*.ts", "**/*.tsx", "torchlight.config.js", "docs/helpers/get-tagged-posts.js", "types"]
 }
